syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message AddTextAnnotationRequest{
  PdfDocument document = 1;
  int32 page_index = 2;
  int32 x = 3;
  int32 y = 4;
  TextAnnotation text_annotation = 5;
  optional int32 width = 6;
  optional int32 height = 7;
}

message GetAnnotationCountRequest{
  PdfDocument document = 1;
  int32 page_index = 2;
}

message AnnotationIcon {
  int32 enum_value = 1;
}

message TextAnnotation{
  optional string color_code = 1;
  optional string contents = 2;
  optional bool hidden = 3;
  optional double opacity = 4;
  optional bool open_by_default = 5;
  optional bool printable = 6;
  optional bool read_only = 7;
  optional bool rotateable = 8;
  optional string subject = 9;
  optional string title = 10;
  optional AnnotationIcon icon = 11;
}
